highlight fix: overflow

--- a/source/css/wen.css
+++ b/source/css/wen.css
@@ -390,6 +390,7 @@ img {
     font-size: 1.8rem;
     line-height: 2.5rem;
     font-weight: 300;
+    overflow: auto;
 }
 .highlight pre .function .keyword,
 .highlight pre .constant {
